@@ -77,7 +77,7 @@
 				<include>Animation_BottomSlide</include>
 				<orientation>horizontal</orientation>
 				<itemgap>5</itemgap>
-				<visible>!Player.ChannelPreviewActive</visible>
+				<visible>![Player.ChannelPreviewActive | Window.IsActive(videoosd)]</visible>
 				<animation effect="fade" start="0" end="100" time="200" delay="1000">Visible</animation>
 				<include content="MediaFlag">
 					<param name="texture" value="$VAR[VideoPlayerResolutionFlagVar]" />
@@ -269,7 +269,7 @@
 				<include>Animation_BottomSlide</include>
 				<orientation>horizontal</orientation>
 				<itemgap>5</itemgap>
-				<visible>!Window.IsVisible(videoosd) + !Player.ChannelPreviewActive</visible>
+				<visible>![Player.ChannelPreviewActive | Window.IsActive(videoosd)]</visible>
 				<include content="MediaFlag">
 					<param name="texture" value="$VAR[VideoPlayerResolutionFlagVar]" />
 					<param name="width" value="73" />
