@@ -23,6 +23,18 @@
 					<aspectratio align="center" aligny="center">keep</aspectratio>
 					<texture fallback="fallback.png">$VAR[ClearLogoVar]</texture>
 				</control>
+				<!--<control type="image">
+					<bottom>1</bottom>
+					<left>-16</left>
+					<width>516</width>
+					<height>128</height>
+					<aspectratio align="center" aligny="center">keep</aspectratio>
+					<texture fallback="fallback.png">$VAR[BannerVar]</texture>
+					<bordertexture border="21">overlays/shadow.png</bordertexture>
+					<bordersize>20</bordersize>
+					<animation effect="fade" time="200">VisibleChange</animation>
+					<visible>!Control.HasFocus(138) + !Control.HasFocus(50)</visible>
+				</control>-->
 				<control type="group">
 					<visible>String.IsEqual(Control.GetLabel(3333),fallback.png)</visible>
 					<control type="image">
