@@ -657,7 +657,7 @@
 				<animation effect="slide" start="0,50" end="0,0" time="300" tween="cubic" easing="out" reversible="false">Focus</animation>
 				<animation effect="fade" start="100" end="0" time="0">UnFocus</animation>
 				<animation effect="slide" end="67,0" time="0" condition="Window.IsVisible(Home)">Conditional</animation>
-				<animation effect="slide" end="11,0" time="0" condition="Control.IsVisible(54) | [String.IsEqual(Container.ViewMode,$LOCALIZE[31101]) + Window.IsVisible(DialogContextMenu.xml)]">Conditional</animation>
+				<animation effect="slide" end="11,0" time="0" condition="Control.IsVisible(54) | [String.IsEqual(Container.ViewMode,$LOCALIZE[31101]) + [Window.IsVisible(DialogContextMenu.xml) | Window.IsVisible(DialogVideoInfo.xml)]]">Conditional</animation>
 				<animation effect="slide" end="-57,0" time="0" condition="Window.IsVisible(script-globalsearch-main.xml)">Conditional</animation>
 				<control type="image">
 					<right>-6</right>
@@ -870,7 +870,7 @@
 				<visible>!String.IsEmpty(ListItem.Art(discart))</visible>
 				<animation effect="slide" start="0,50" end="0,0" time="300" tween="cubic" easing="out" reversible="false">Focus</animation>
 				<animation effect="fade" start="100" end="0" time="0">UnFocus</animation>
-				<animation effect="slide" end="281,0" time="0" condition="Control.IsVisible(505) | [String.IsEqual(Container.ViewMode,$LOCALIZE[40016]) + Window.IsVisible(DialogContextMenu.xml)]">Conditional</animation>
+				<animation effect="slide" end="281,0" time="0" condition="Control.IsVisible(505) | [String.IsEqual(Container.ViewMode,$LOCALIZE[40016]) + [Window.IsVisible(DialogContextMenu.xml) | Window.IsVisible(DialogVideoInfo.xml)]]">Conditional</animation>
 				<control type="image">
 					<right>3</right>
 					<top>0</top>
