@@ -3,6 +3,7 @@
 • Add rewind and forward OSD buttons for PVR TimeShift
 • Fix on PVR/Radio widgets
 • Minor changes
+• Minor fixes
 
 [B]2.3.1[/B]
 • Add Next Up popup for Live TV
